2008-07-04  Joe English  <jenglish@users.sourceforge.net>

	* generic/ttk/ttkDefaultTheme.c, generic/ttk/ttkClamTheme.c,
	generic/ttk/ttkClassicTheme.c, generic/ttk/ttkElements.c: 
	Backport [Bug 2009213].

2008-06-29  Don Porter  <dgp@users.sourceforge.net>

	*** 8.5.3 TAGGED FOR RELEASE ***

	* generic/tk.h:		Bump to 8.5.3 for release.
	* library/tk.tcl:
	* unix/configure.in:
	* unix/tk.spec:
	* win/configure.in:
	* README:

	* unix/configure:	autoconf-2.59
	* win/configure:

	* changes:	Updates for 8.5.3 release.

2008-06-26  Don Porter  <dgp@users.sourceforge.net>

	* generic/tkPanedWindow.c (PanedWindowProxyCommand)
	(DisplayPanedWindow): Ensure that a zero width never gets fed to the
	underlying window system. [Bug 1639824]  (Backport fix from dkf).

2008-06-20  Joe English  <jenglish@users.sourceforge.net>

	* library/ttk/treeview.tcl: Backport fix for [Bug 1951733]

2008-06-19  Don Porter  <dgp@users.sourceforge.net>

	* changes:	Updates for 8.5.3 release.

2008-06-18  Daniel Steffen  <das@users.sourceforge.net>

	* macosx/tkMacOSXCarbonEvents.c:	fix debug carbon event tracing;
	(InstallStandardApplicationEventHandler):	replace needless use of
	TkMacOSXInitNamedDebugSymbol() by standard TkMacOSXInitNamedSymbol().

	* macosx/tkMacOSXDebug.c:	revert 2007-11-09 commit making
	* macosx/tkMacOSXDebug.h:	TkMacOSXInitNamedDebugSymbol()
					available outside of debug builds.

	* macosx/tkMacOSXEmbed.c (TkpMakeWindow):	fix bug with missing
	* macosx/tkMacOSXSubwindows.c (XMapWindow):	focus on first map by
	only sending VisibilityNotify events once windows are mapped (rather
	than when they are created).

	* macosx/tkMacOSXWindowEvent.c (TkMacOSXProcessWindowEvent): fix
	return value.

	* macosx/tkMacOSXInit.c:	add helper to efficiently convert from
	* macosx/tkMacOSXPrivate.h:	CFString to Tcl_Obj.

	* macosx/tkMacOSXFont.c (TkpGetFontFromAttributes, InitFont):	fix
	incorrect conversion to points of font sizes already in points; factor