@@ -1,3 +1,10 @@
+2008-07-22  Daniel Steffen  <das@users.sourceforge.net>
+
+	* library/ttk/aquaTheme.tcl: Use system color names and TIP145 named
+	font instead of hardcoded color values and deprecated native font name.
+
+	* macosx/tkMacOSXHLEvents.c: sync with HEAD.
+
 2008-07-04  Joe English  <jenglish@users.sourceforge.net>
 
 	* generic/ttk/ttkDefaultTheme.c, generic/ttk/ttkClamTheme.c,
